pwnsjp (0.8.1) UNRELEASED; urgency=low

  * Update versions and dates in README, TODO, and in the configure script.
  * Use pkg-config to determine ncursesw location.
  * Fix a few type mismatches on 64-bit architectures.

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 11 Jun 2013 21:27:40 +0200

pwnsjp (0.8) unstable; urgency=low

  * Change version numbering scheme.
  * Fix incorrect rendering of quotation marks.
  * Rephrase some error messages.
  * Remove the “AUTHOR” section from the manual pages, as per man-pages(7)
    recommendation.
  * Fix “make distclean” to remove also files generated by make, not only
    those generated by configure.
  * Drop Intel C++ Compiler compatibility code.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 07 Feb 2013 21:28:32 +0100

pwnsjp (0.700) unstable; urgency=low

  * Document the -f/--file options.
  * Prefer U+2018 LEFT SINGLE QUOTATION MARK to U+201B SINGLE HIGH-REVERSED-9
    QUOTATION MARK.
  * Use Autoconf.
  * Relicense to the Expat license.
  * Remove Debian packaging from the tarball.
  * Remove some unused code.
  * Rewrite README (in English).

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 11 Jul 2012 21:08:30 +0200

pwnsjp (0.604) unstable; urgency=low

  * Type fixes for 64-bit machines.

 -- Jakub Wilk <jwilk@jwilk.net>  Sun, 10 May 2009 18:13:56 +0200

pwnsjp (0.603) unstable; urgency=low

  * Again, fix an infinite loop which appears in some configurations.

 -- Jakub Wilk <jwilk@jwilk.net>  Sun, 10 May 2009 18:03:01 +0200

pwnsjp (0.602) unstable; urgency=low

  * Fix an infinite loop which appears in some configurations.

 -- Jakub Wilk <jwilk@jwilk.net>  Sun, 17 Jun 2007 21:38:18 +0200

pwnsjp (0.601) unstable; urgency=low

  * No more problems with funny colors. (Tested with: linux console,
    rxvt-unicode, xterm, gnome-terminal).
  * Make US-ASCII fallback table consist of only US-ASCII characters. 

 -- Jakub Wilk <jwilk@jwilk.net>  Tue,  7 Nov 2006 19:35:19 +0100

pwnsjp (0.600) unstable; urgency=low
